tests/NormalTests/paczka2/big_fuzzy/53184395.err
Error in line 2: EZq95 S176 75,7
Error in line 6: vlp S176 29,8
Error in line 9: hTTYs A540 70,4
Error in line 27: 3kTEhfcebis A540 44,4
Error in line 30: 3kTEhfcebis S176 91,4
Error in line 14: hTTYs S176 77,7
Error in line 31: 3kTEhfcebis S102 85,3
Error in line 42: 3kTEhfcebis S446 43,8
Error in line 54: HWq S102 73,8
Error in line 64: EZq95 A540 66,0
Error in line 78: S446 A540 87,6
Error in line 82: S446 S446 73,3
Error in line 100: V6wgMXIs S176 84,4
Error in line 109: S446 S176 54,5
Error in line 118: vlp S176 67,2
Error in line 121: vlp S102 52,7
Error in line 124: hTTYs S446 -1,19
Error in line 129: hTTYs S176 29,8
Error in line 80: 3kTEhfcebis S446 403,0
Error in line 131: 3kTEhfcebis S102 60,7
Error in line 149: EZq95 S176 55,4
Error in line 165: hYs S446 10,2
Error in line 148: HWq S176 25,9
Error in line 173: 3kTEhfcebis S176 68,5
Error in line 167: hTTYs S446 223,2
Error in line 188: V6wgMXIs S446 29,7
Error in line 171: S446 S176 36,2
Error in line 194: S446 S446 13,9
Error in line 200: V6wgMXIs S176 82,4
Error in line 215: vlp S102 26,48
Error in line 216: S446 S102 -3,0
Error in line 211: vlp S176 42,1
Error in line 232: V6wgMXIs S446 43,7
Error in line 233: hTTYs S176 25,0
